force-app/main/default/objects/AM_Vehicle_Sale__c/AM_Vehicle_Sale__c.object-meta.xml
<CustomObject>
    <label>AM Vehicle Sale</label>
    <nameField>
        <displayFormat>AMCS-{0000}</displayFormat>
        <label>Vehicle_Sale_No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AM Vehicle Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>