force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>AM_Amount_Paid__c</fullName>
    <label>AM Amount Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>