force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Balance_Amount__c</fullName>
    <label>AM Balance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>