force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Brand__c.field-meta.xml
<CustomField>
    <fullName>AM_Brand__c</fullName>
    <formula>TEXT( AM_Car_Id__r.AM_Brand__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Brand</label>
    <type>Text</type>
</CustomField>