force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Car_Id__c.field-meta.xml
<CustomField>
    <fullName>AM_Car_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Vehicle</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>AM Vehicle Sales</relationshipLabel>
    <relationshipName>AM_Car_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>