force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Customer__c.field-meta.xml
<CustomField>
    <fullName>AM_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AM Vehicle Sales</relationshipLabel>
    <relationshipName>AM_Vehicle_Sales</relationshipName>
    <type>Lookup</type>
</CustomField>