force-app/main/default/objects/AM_Vehicle_Sale__c/fields/Am_Date_Of_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Am_Date_Of_Delivery__c</fullName>
    <label>Am_Date_Of_Delivery</label>
    <type>DateTime</type>
</CustomField>