force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Model__c.field-meta.xml
<CustomField>
    <fullName>AM_Model__c</fullName>
    <formula>TEXT( AM_Car_Id__r.AM_Vehicle_Model__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Model</label>
    <type>Text</type>
</CustomField>