force-app/main/default/objects/AM_Vehicle_Sale__c/fields/Am_Price_Sold__c.field-meta.xml
<CustomField>
    <fullName>Am_Price_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Am_Price_Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>