force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Profit_Gained__c.field-meta.xml
<CustomField>
    <fullName>AM_Profit_Gained__c</fullName>
    <formula>Am_Price_Sold__c - (AM_Car_Id__r.AM_Vehicle_Final_Amount__c -  AM_Car_Id__r.AM_Profit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Profit Gained</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>