force-app/main/default/objects/AM_Vehicle_Sale__c/fields/Am_Sold_Date__c.field-meta.xml
<CustomField>
    <fullName>Am_Sold_Date__c</fullName>
    <label>Am_Sold_Date</label>
    <type>Date</type>
</CustomField>