force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Vehicle_Amount__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Amount__c</fullName>
    <formula>AM_Car_Id__r.AM_Vehicle_Final_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>