force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Vehicle_Discount__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Discount__c</fullName>
    <label>AM Vehicle Discount Amount</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>