force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Vehicle_Month__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Month__c</fullName>
    <formula>MONTH(Am_Sold_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>