force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Vehicle_PurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_PurchaseDate__c</fullName>
    <formula>AM_Car_Id__r.AM_Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle PurchaseDate</label>
    <type>Date</type>
</CustomField>