force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Vehicle_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Registration_Number__c</fullName>
    <formula>AM_Car_Id__r.AM_Vehicle_Registration_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Registration Number</label>
    <type>Text</type>
</CustomField>