force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Vehicle_Tax__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Tax__c</fullName>
    <label>AM Vehicle Tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>