force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>AM_Vehicle_Year__c</fullName>
    <formula>YEAR(Am_Sold_Date__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Vehicle Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>