force-app/main/default/objects/AM_Vehicle_Sale__c/fields/AM_Year__c.field-meta.xml
<CustomField>
    <fullName>AM_Year__c</fullName>
    <formula>TEXT(AM_Car_Id__r.AM_Make_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Year</label>
    <type>Text</type>
</CustomField>