force-app/main/default/objects/AM_Vehicle_Sale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Am_Price_Sold__c</columns>
    <columns>AM_Car_Id__c</columns>
    <columns>AM_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>